--- a/src/Web/NRADemoApp.Web/appsettings.json
+++ b/src/Web/NRADemoApp.Web/appsettings.json
@@ -1,11 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NRADemoApp;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "DefaultConnection": "Server=DESKTOP-7V4HDBF\\SQLEXPRESS;Database=NRADemoApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
